--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,1 @@
-<!-- String Interpolation -->
-<h3>My name is {{firstName}}</h3> 
-
-<!-- Property Binding -->
-<img [src]="imgPath"> 
-
-<!-- Event Binding -->
-<input type="text" (input)="passValueToComponent($event)">
-
-<!-- Two Way Binding 
- you need to add FormsModule in imports in app.module.ts
--->
-<br>
-<input type="text" [(ngModel)]="defaultValue">
-<span>{{defaultValue}}</span>
-
-
-<br><br>
-<input type="text" [(ngModel)]="defaultGreeting">
-<button [disabled]="isButtonDisabled" (click)="check()">Check</button>
-
+<app-youssef-component></app-youssef-component>
